crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_generate_conflicting_props_identifiers.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 982
expression: output
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const q_test_component_useComputed_PYU291PvidQ = /*#__PURE__*/ _noopQrl("test_component_useComputed_PYU291PvidQ");
const q_test_component_useTask_jewzFYh3XmQ = /*#__PURE__*/ _noopQrl("test_component_useTask_jewzFYh3XmQ");
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ _noopQrl("test_component_LUXeXe0DQrg");
q_test_component_useComputed_PYU291PvidQ.s(() => color);
q_test_component_useTask_jewzFYh3XmQ.s(() => {
	props.checked;
});
q_test_component_LUXeXe0DQrg.s(({ color, ...props }) => {
	useComputed$(() => color);
	useTask$(() => {
		props.checked;
	});
	return "hi";
});
export default componentQrl(q_test_component_LUXeXe0DQrg);

== DIAGNOSTICS ==
[]
