crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_inline_exported_var_into_segment.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { formActionQrl } from "forms";
import { qrl } from "@qwik.dev/core";
import { wrapperFn, getEnv } from 'utils';
//
const q_featureAction_formAction_cZgh2PzV1cc = /*#__PURE__*/ qrl(()=>import("./test.tsx_featureAction_formAction_cZgh2PzV1cc"), "featureAction_formAction_cZgh2PzV1cc");
//
const flagEnabled = getEnv().PUBLIC_FEATURE;
export const FeatureSchema = wrapperFn(flagEnabled);
export const featureAction = formActionQrl(q_featureAction_formAction_cZgh2PzV1cc);

============================= test.tsx_featureAction_formAction_valiForm_3yxd03SSzJ8.js (ENTRY POINT) ==
import { FeatureSchema } from "./test";
export const featureAction_formAction_valiForm_3yxd03SSzJ8 = FeatureSchema;

/*
{
  "origin": "test.tsx",
  "name": "featureAction_formAction_valiForm_3yxd03SSzJ8",
  "entry": null,
  "displayName": "test.tsx_featureAction_formAction_valiForm",
  "hash": "3yxd03SSzJ8",
  "canonicalFilename": "test.tsx_featureAction_formAction_valiForm_3yxd03SSzJ8",
  "path": "",
  "extension": "js",
  "parent": "featureAction_formAction_cZgh2PzV1cc",
  "ctxKind": "function",
  "ctxName": "valiForm$",
  "captures": false,
  "loc": [
    315,
    339
  ]
}
*/
============================= test.tsx_featureAction_formAction_cZgh2PzV1cc.js (ENTRY POINT) ==
export const featureAction_formAction_cZgh2PzV1cc = async (requestEvent) => {
	return { status: "success" };
};

/*
{
  "origin": "test.tsx",
  "name": "featureAction_formAction_cZgh2PzV1cc",
  "entry": null,
  "displayName": "test.tsx_featureAction_formAction",
  "hash": "cZgh2PzV1cc",
  "canonicalFilename": "test.tsx_featureAction_formAction_cZgh2PzV1cc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "formAction$",
  "captures": false,
  "loc": [
    231,
    340
  ],
  "paramNames": [
    "requestEvent"
  ]
}
*/
== DIAGNOSTICS ==
[]
