crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_move_over_side_effects.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
export const $promoteToRoot$ = (ref: SeenRef)=>{
    const path = $getObjectPath$(ref) as string;
    // should stay before the push
    const idx = roots.length;
    roots.push(new BackRef(path));
    ref.$parent$ = null;
    ref.$index$ = idx;
    return idx;
};

== DIAGNOSTICS ==
[]
