crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_transform_bind_checked_in_var_props_for_jsx_split.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { $, component$, useSignal } from "@qwik.dev/core";
export const FieldInput = qrl(() => import("./test.tsx_FieldInput_ylDi5NLjH3k"), "FieldInput_ylDi5NLjH3k");

============================= test.tsx_FieldInput_ylDi5NLjH3k.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const FieldInput_ylDi5NLjH3k = (props) => {
	const input = useSignal(true);

  return (
		<>
			{/* var props */}
			<input
				bind:checked={input}
				{...props}
			/>
			{/* const props */}
			<input
				{...props}
				bind:checked={input}
			/>
		</>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_ylDi5NLjH3k",
  "entry": null,
  "displayName": "test.tsx_FieldInput",
  "hash": "ylDi5NLjH3k",
  "canonicalFilename": "test.tsx_FieldInput_ylDi5NLjH3k",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    329
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
