crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_wrap_fn.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 986
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
import { A } from "./componentA";
export const Cmp = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { A } from "./componentA";
import { useSignal } from "@qwik.dev/core";
export const _u6BtPnK76q4 = () => {
	const currentStep = useSignal('STEP_1');
	const currentType = useSignal<'NEXT' | 'PREVIOUS'>('PREVIOUS');

	const getStep = (step: string, type: 'NEXT' | 'PREVIOUS') => {
		return step === 'STEP_1' ? 'STEP_2' : 'STEP_1';
	};

	return (
		<>
			<button onClick$={() => (currentType.value = 'NEXT')}>CLICK</button>
			<A href={getStep(currentStep.value, currentType.value)} />
		</>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    111,
    518
  ]
}
*/
== DIAGNOSTICS ==
[]
