crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_wrap_var_template_string.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useComputed$ } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";
export default qrl(() => import("./test.tsx_test_5GvkoOCMrJc"), "test_5GvkoOCMrJc");

============================= test.tsx_test_5GvkoOCMrJc.js (ENTRY POINT) ==
import { inlineTranslate } from "translate-lib";
import { useComputed$ } from "@qwik.dev/core";
export const test_5GvkoOCMrJc = () => {
			const t = inlineTranslate();

			const productTitle = useComputed$(() => {
				return 'Test title';
			});

			return (
				<img 
					attr={t('home.imageAlt.founded-product:')}
					alt={`${t('home.imageAlt.founded-product:')} ${productTitle.value}`} />
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_5GvkoOCMrJc",
  "entry": null,
  "displayName": "test.tsx_test",
  "hash": "5GvkoOCMrJc",
  "canonicalFilename": "test.tsx_test_5GvkoOCMrJc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    131,
    418
  ]
}
*/
============================= test.tsx_test_component_productTitle_XRAHebRekPQ.js (ENTRY POINT) ==
export const test_component_productTitle_XRAHebRekPQ = () => {
	return "Test title";
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_productTitle_XRAHebRekPQ",
  "entry": null,
  "displayName": "test.tsx_test_component_productTitle",
  "hash": "XRAHebRekPQ",
  "canonicalFilename": "test.tsx_test_component_productTitle_XRAHebRekPQ",
  "path": "",
  "extension": "js",
  "parent": "test_5GvkoOCMrJc",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": false,
  "loc": [
    207,
    258
  ]
}
*/
== DIAGNOSTICS ==
[]
