crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_preserve_non_ident_explicit_captures.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.tsx ==
import { _captures, inlinedQrl } from "@qwik.dev/core";
const left = 1;
const right = 2;
export const task = inlinedQrl(() => {
	const left = _captures[0];
	const middle = _captures[1];
	const right = _captures[2];
	return middle ? left : right;
}, "task", [
	left,
	true,
	right
]);
== DIAGNOSTICS ==
[]
