crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_split_spread_props.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export default /*#__PURE__*/ componentQrl(q__u6BtPnK76q4);

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = (props) => {
			return (
				<div {...props}></div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    66,
    139
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
